--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="styles/style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning how to learn</title>
@@ -8,23 +9,276 @@
 <body>
   <div class="page">
     <header class="header">
-
+      <div class="logo logo_place_header">
+        <img src="images/logo_place_header.png">
+      </div>
+      <div class="header__title">
+        <p>Learning How to Learn</p>
+      </div>
+      <div class="header__subtitle">
+        <p>The most effective, cutting-edge learning techniques that you can apply to your daily life. <a href="#" style="text-decoration: none;">Learn More →</a></p>
+      </div>
+      <div class="header__link"></div>
+      <div class="header__main-illustration">
+        <img src="images/header-image.png" alt="Man standing on mountain">
+      </div>
+      <div class="header__square-pic"></div>
     </header>
+
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <div class="two-columns__brief">
+            <h2>The main problem with education</h2>
+          </div>
+          <div class="two-columns__main-text">
+            <div class="two-columns__paragraph-one">
+              <p>Whether it's at school or university, the one thing no one ever teaches you is how to teach
+                yourself. We often just end up drilling specific exercises and mindlessly memorizing information
+                so that when exam time comes around, we pass the test. But once the test is over, that
+                information has outlived its usefulness, and there's no guarantee that information will be
+                retained. In the end, we're really just learning how to pass our tests. </p>
+            </div>
+            <div class="two-columns__paragraph-two">
+              <p><span class="two-columns__span-accent">Here's the real question:</span> does this approach of repetition and memorization help us truly
+                understand the subject material? The academic consensus nowadays is that it doesn't. In fact,
+                what's more important than any individual topic is knowing how to study, but for some reason,
+                this point is often overlooked. So, what can we do to remedy this?</p>
+            </div>
+            <div class="two-columns__paragraph-three">
+                <p>Well, there are various techniques and exercises that can be applied to the educational process
+                to help make it more efficient and engaging. Keep scrolling to uncover some of the secrets of
+                effective learning.</p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+        <div class="section-title">
+          <h1>Facts and figures</h1>
+        </div>
+        <div class="section-subtitle">
+          <h2>On learning and the brain</h2>
+        </div>
+        <ul class="table">
+          <li class="table__cell">
+            <div class="table__heading">
+              <h3>86 Billion</h3>
+            </div>
+            <div class="table__text">
+              <p>The number of neurons in the human brain</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div class="table__heading">
+              <h3>73%</h3>
+            </div>
+            <div class="table__text">
+              <p>The percentage of adults in the US who considers themselves lifelong learners</p>
+              <p>Pew Research Centere</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div class="table__heading">
+              <h3>1,000 terabytes</h3>
+            </div>
+            <div class="table__text">
+              <p>The information storage capacity of a human</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div class="table__heading">
+              <h3>500 trillion</h3>
+            </div>
+            <div class="table__text">
+              <p>The number of nerve synapses responsible for learning in the average adult human</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div class="table__heading">
+              <h3>420 million</h3>
+            </div>
+            <div class="table__text">
+              <p>The number of adults under 25 with insufficient education for finding employment</p>
+              <p>World Bank, 2017</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div class="table__heading">
+              <h3>26 years old</h3>
+            </div>
+            <div class="table__text">
+              <p>The age at which Albert Einstein published his groundbreaking paper on special relativity</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div class="table__heading">
+              <h3>1885</h3>
+            </div>
+            <div class="table__text">
+              <p>Development of the forgetting curve</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div class="table__heading">
+              <h3>1897</h3>
+            </div>
+            <div class="table__text">
+              <p>Publication of Ivan Pavlov's research on classical conditioning</p>
+            </div>
+          </li>
+        </ul>
       </section>
 
       <section class="feynman">
+        <div class="feynman__image">
+          <img src="images/feynman.png">
+        </div>
+        <div class="feynman__title">
+          <h1>The Feynman Technique</h1>
+        </div>
+        <div class="feynman__subtitle">
+          <h2>Learn without forgeting</h2>
+        </div>
+        <div class="feynman__link">
+          <p><a href="#" style="text-decoration: none;">More →</a></p>
+        </div>
       </section>
 
       <section class="kaufman">
+        <div class="section-title_theme_dark">
+          <h1>Ten principles of rapid skill aquisition</h1>
+        </div>
+        <div class="section-subtitle_theme_dark">
+          <h2>By Josh Kaufman</h2>
+        </div>
+        <ul class="table_theme_dark">
+          <li class="table__cell_theme_dark">
+            <div class="table__heading_theme_dark">
+              <p>1</p>
+            </div>
+            <div class="table__text_theme_dark">
+              <p>Choose a loveable project</p>
+            </div>
+          </li>
+          <li class="table__cell_theme_dark">
+            <div class="table__heading_theme_dark">
+              <p>2</p>
+            </div>
+            <div class="table__text_theme_dark">
+              <p>Focus your energy on one skill at a time</p>
+            </div>
+          </li>
+          <li class="table__cell_theme_dark">
+            <div class="table__heading_theme_dark">
+              <p>3</p>
+            </div>
+            <div class="table__text_theme_dark">
+              <p>Define your target performance level</p>
+            </div>
+          </li>
+          <li class="table__cell_theme_dark">
+            <div class="table__heading_theme_dark">
+              <p>4</p>
+            </div>
+            <div class="table__text_theme_dark">
+              <p>Deconstruct the skill into sub-skills</p>
+            </div>
+          </li>
+          <li class="table__cell_theme_dark">
+            <div class="table__heading_theme_dark">
+              <p>5</p>
+            </div>
+            <div class="table__text_theme_dark">
+              <p>Obtain critical tools</p>
+            </div>
+          </li>
+          <li class="table__cell_theme_dark">
+            <div class="table__heading_theme_dark">
+              <p>6</p>
+            </div>
+            <div class="table__text_theme_dark">
+              <p>Eliminate barriers to practice</p>
+            </div>
+          </li>
+          <li class="table__cell_theme_dark">
+            <div class="table__heading_theme_dark">
+              <p>7</p>
+            </div>
+            <div class="table__text_theme_dark">
+              <p>Make dedicated time for practice</p>
+            </div>
+          </li>
+          <li class="table__cell_theme_dark">
+            <div class="table__heading_theme_dark">
+              <p>8</p>
+            </div>
+            <div class="table__text_theme_dark">
+              <p>Create fast feedback loops</p>
+            </div>
+          </li>
+          <li class="table__cell_theme_dark">
+            <div class="table__heading_theme_dark">
+              <p>9</p>
+            </div>
+            <div class="table__text_theme_dark">
+              <p>Practice by the clock in short bursts</p>
+            </div>
+          </li>
+          <li class="table__cell_theme_dark">
+            <div class="table__heading_theme_dark">
+              <p>10</p>
+            </div>
+            <div class="table__text_theme_dark">
+              <p>Emphasize quanity and speed</p>
+            </div>
+          </li>
+        </ul>
+        <div class="kaufman__triangle">
+          <img src="images/kaufman-triangle.svg" alt="A big blue triangle, over which Josh Kaufman claims ownership">
+        </div>
       </section>
     </main>
     <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__columns__content_copyright">
+          <div class="logo_place_footer">
+            <img src="images/logo_place_footer.png">
+          </div>
+          <div class="footer__author">
+            <p>&#169; David Cares-Gomez</p>
+          </div>
+        </div>
+        <div class="footer__columns__content_about">
+          <div class="footer__column-heading">
+            <p>About Practicum by Yandex</p>
+          </div>
+          <div class="footer__list">
+            <ul>
+              <li>Home page</li>
+              <li>Mission</li>
+              <li>Professions</li>
+            </ul>
+          </div>
+          <div class="footer__column-link">
 
+          </div>
+        </div>
+        <div class="footer__columns__content_social">
+          <div class="footer__column-heading">
+            <p>Social media</p>
+          </div>
+          <div class="footer__column-link">
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+          </div>
+          <div class="footer__social-icon">
+            <img src="images/facebook_white.svg">
+            <img src="images/instagram_white.svg">
+          </div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
