--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
       </section>
 
       <section class="kaufman">
+        <div class="kaufman__content">
         <h1 class="section-title_theme_dark">Ten principles of rapid skill aquisition</h1>
         <h2 class="section-subtitle_theme_dark">By Josh Kaufman</h2>
         <ul class="table_theme_dark">
@@ -209,6 +210,7 @@
             </div>
           </li>
         </ul>
+        </div>
       <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="A big blue triangle, over which Josh Kaufman claims ownership">
       </section>
     </main>
@@ -216,35 +218,23 @@
       <div class="footer__columns">
         <div class="footer__columns__content_copyright">
           <img class="logo_place_footer" src="images/logo_place_footer.png">
-            <p class="footer__author">&#169; David Cares-Gomez</p>
+          <p class="footer__author">&#169; David Cares-Gomez</p>
         </div>
         <div class="footer__columns__content_about">
-          <div class="footer__column-heading">
-            <p>About Practicum by Yandex</p>
-          </div>
-          <div class="footer__list">
-            <ul>
-              <li>Home page</li>
-              <li>Mission</li>
-              <li>Professions</li>
-            </ul>
-          </div>
-          <div class="footer__column-link">
-
-          </div>
+          <p class="footer__column-heading" >About Practicum by Yandex</p>
+          <ul class="footer__list">
+            <li>Home page</li>
+            <li>Mission</li>
+            <li>Professions</li>
+          </ul>
         </div>
         <div class="footer__columns__content_social">
-          <div class="footer__column-heading">
-            <p>Social media</p>
-          </div>
-          <div class="footer__column-link">
-            <a href="#">Facebook</a>
-            <a href="#">Instagram</a>
-          </div>
-          <div class="footer__social-icon">
-            <img src="images/facebook_white.svg">
-            <img src="images/instagram_white.svg">
-          </div>
+            <p class="footer__column-heading">Social media</p>
+            <img class="footer__social-icons" src="images/facebook_white.svg">
+            <a class="footer__column-link" href="#">Facebook</a>
+            <br>
+            <img class="footer__social-icons" src="images/instagram_white.svg">
+            <a class="footer__column-link" href="#">Instagram</a>
         </div>
       </div>
     </footer>
