--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo_place_header">
-        <img src="images/logo_place_header.png">
-      </div>
-      <div class="header__title">
-        <p>Learning How to Learn</p>
-      </div>
-      <div class="header__subtitle">
-        <p>The most effective, cutting-edge learning techniques that you can apply to your daily life. <a href="#" style="text-decoration: none;">Learn More →</a></p>
-      </div>
-      <div class="header__link"></div>
+      <img class="logo logo_place_header" src="images/logo_place_header.png" alt="Epic ponderer stood on a mountaintop
+      deliberating over the finer points of the modern educational
+      system, while also wondering where that giant blue square came
+      from." >
+      <h1 class="header__title">Learning How to Learn</h1>
+      <p class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life. <a class="header__link" href="#">Learn More →</a></p>
       <img src="images/header-image.png" alt="Man standing on mountain" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
@@ -46,168 +42,98 @@
       </section>
 
       <section class="digits">
-        <h1 class="section-title" >Facts and figures</h1>
-        <h2 class="section-subtitle">On learning and the brain</h2>
+        <h2 class="section-title" >Facts and figures</h1>
+        <h3 class="section-subtitle">On learning and the brain</h2>
         <ul class="table">
           <li class="table__cell">
-            <div class="table__heading">
-              <h3>86 Billion</h3>
-            </div>
-            <div class="table__text">
-              <p>The number of neurons in the human brain</p>
-            </div>
+              <h3 class="table__heading" >86 Billion</h3>
+              <p class="table__text">The number of neurons in the human brain</p>
           </li>
           <li class="table__cell">
-            <div class="table__heading">
-              <h3>73%</h3>
-            </div>
-            <div class="table__text">
-              <p>The percentage of adults in the US who considers themselves lifelong learners</p>
-              <p>Pew Research Centere</p>
-            </div>
+              <h3 class="table__heading" >73%</h3>
+              <p class="table__text">The percentage of adults in the US who considers themselves lifelong learners</p>
+              <p class="table__text">Pew Research Centere</p>
           </li>
           <li class="table__cell">
-            <div class="table__heading">
-              <h3>1,000 terabytes</h3>
-            </div>
-            <div class="table__text">
-              <p>The information storage capacity of a human</p>
-            </div>
+              <h3 class="table__heading">1,000 terabytes</h3>
+              <p class="table__text">The information storage capacity of a human</p>
           </li>
           <li class="table__cell">
-            <div class="table__heading">
-              <h3>500 trillion</h3>
-            </div>
-            <div class="table__text">
-              <p>The number of nerve synapses responsible for learning in the average adult human</p>
-            </div>
+              <h3 class="table__heading">500 trillion</h3>
+              <p class="table__text">The number of nerve synapses responsible for learning in the average adult human</p>
           </li>
           <li class="table__cell">
-            <div class="table__heading">
-              <h3>420 million</h3>
-            </div>
-            <div class="table__text">
-              <p>The number of adults under 25 with insufficient education for finding employment</p>
-              <p>World Bank, 2017</p>
-            </div>
+              <h3 class="table__heading">420 million</h3>
+              <p class="table__text">The number of adults under 25 with insufficient education for finding employment</p>
+              <p class="table__text">World Bank, 2017</p>
           </li>
           <li class="table__cell">
             <div class="table__heading">
               <h3>26 years old</h3>
             </div>
-            <div class="table__text">
-              <p>The age at which Albert Einstein published his groundbreaking paper on special relativity</p>
-            </div>
+              <p class="table__text">The age at which Albert Einstein published his groundbreaking paper on special relativity</p>
           </li>
           <li class="table__cell">
-            <div class="table__heading">
-              <h3>1885</h3>
-            </div>
-            <div class="table__text">
-              <p>Development of the forgetting curve</p>
-            </div>
+              <h3 class="table__heading">1885</h3>
+              <p class="table__text">Development of the forgetting curve</p>
           </li>
           <li class="table__cell">
-            <div class="table__heading">
-              <h3>1897</h3>
-            </div>
-            <div class="table__text">
-              <p>Publication of Ivan Pavlov's research on classical conditioning</p>
-            </div>
+              <h3 class="table__heading">1897</h3>
+              <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning</p>
           </li>
         </ul>
       </section>
 
       <section class="feynman">
-        <h1 class="feynman__title">The Feynman Technique</h1>
-        <h2 class="feynman__subtitle">Learn without forgeting</h2>
+        <h2 class="feynman__title">The Feynman Technique</h1>
+        <h3 class="feynman__subtitle">Learn without forgeting</h2>
         <a class="feynman__link" href="#">More →</a>
       </section>
 
       <section class="kaufman">
         <div class="kaufman__content">
-        <h1 class="section-title_theme_dark">Ten principles of rapid skill aquisition</h1>
-        <h2 class="section-subtitle_theme_dark">By Josh Kaufman</h2>
-        <ul class="table_theme_dark">
-          <li class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">
-              <p>1</p>
-            </div>
-            <div class="table__text_theme_dark">
-              <p>Choose a loveable project</p>
-            </div>
+        <h2 class="kaufman__content section-title_theme_dark">Ten principles of rapid skill aquisition</h1>
+        <h3 class="kaufman__content section-subtitle_theme_dark">By Josh Kaufman</h2>
+        <ul class="kaufman__content table_theme_dark">
+          <li class="kaufman__content table__cell_theme_dark">
+              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">1</h2>
+              <p class="kaufman__content table__text_theme_dark">Choose a loveable project</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">
-              <p>2</p>
-            </div>
-            <div class="table__text_theme_dark">
-              <p>Focus your energy on one skill at a time</p>
-            </div>
+          <li class="kaufman__content table__cell_theme_dark">
+              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">2</h2>
+              <p class="kaufman__content table__text_theme_dark">Focus your energy on one skill at a time</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">
-              <p>3</p>
-            </div>
-            <div class="table__text_theme_dark">
-              <p>Define your target performance level</p>
-            </div>
+          <li class="kaufman__content table__cell_theme_dark">
+              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">3</h2>
+              <p class="kaufman__content table__text_theme_dark">Define your target performance level</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">
-              <p>4</p>
-            </div>
-            <div class="table__text_theme_dark">
-              <p>Deconstruct the skill into sub-skills</p>
-            </div>
+          <li class="kaufman__content table__cell_theme_dark">
+              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">4</h2>
+              <p class="kaufman__content table__text_theme_dark">Deconstruct the skill into sub-skills</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">
-              <p>5</p>
-            </div>
-            <div class="table__text_theme_dark">
-              <p>Obtain critical tools</p>
-            </div>
+          <li class="kaufman__content table__cell_theme_dark">
+              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">5</h2>
+              <p class="kaufman__content table__text_theme_dark">Obtain critical tools</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">
-              <p>6</p>
-            </div>
-            <div class="table__text_theme_dark">
-              <p>Eliminate barriers to practice</p>
-            </div>
+          <li class="kaufman__content table__cell_theme_dark">
+              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">6</h2>
+              <p class="kaufman__content table__text_theme_dark">Eliminate barriers to practice</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">
-              <p>7</p>
-            </div>
-            <div class="table__text_theme_dark">
-              <p>Make dedicated time for practice</p>
-            </div>
+          <li class="kaufman__content table__cell_theme_dark">
+              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">7</h2>
+              <p class="kaufman__content table__text_theme_dark">Make dedicated time for practice</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">
-              <p>8</p>
-            </div>
-            <div class="table__text_theme_dark">
-              <p>Create fast feedback loops</p>
-            </div>
+          <li class="kaufman__content table__cell_theme_dark">
+              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">8</h2>
+              <p class="kaufman__content table__text_theme_dark">Create fast feedback loops</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">
-              <p>9</p>
-            </div>
-            <div class="table__text_theme_dark">
-              <p>Practice by the clock in short bursts</p>
-            </div>
+          <li class="kaufman__content table__cell_theme_dark">
+              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">9</h2>
+              <p class="kaufman__content table__text_theme_dark">Practice by the clock in short bursts</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">
-              <p>10</p>
-            </div>
-            <div class="table__text_theme_dark">
-              <p>Emphasize quanity and speed</p>
-            </div>
+          <li class="kaufman__content table__cell_theme_dark">
+              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">10</h2>
+              <p class="kaufman__content table__text_theme_dark">Emphasize quanity and speed</p>
           </li>
         </ul>
         </div>
@@ -216,25 +142,26 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__columns__content_copyright">
-          <img class="logo_place_footer" src="images/logo_place_footer.png">
-          <p class="footer__author">&#169; David Cares-Gomez</p>
+        <div class="footer__columns footer__columns__content_copyright">
+          <img class="footer__columns logo_place_footer" src="images/logo_place_footer.png">
+          <p class="footer__columns footer__author">&#169; David Cares-Gomez</p>
         </div>
-        <div class="footer__columns__content_about">
-          <p class="footer__column-heading" >About Practicum by Yandex</p>
-          <ul class="footer__list">
-            <li>Home page</li>
-            <li>Mission</li>
-            <li>Professions</li>
+        <nav class="footer__columns footer__columns__content_about">
+          <h2 class="footer__columns__content_about footer__column-heading">About Practicum by Yandex</h2>
+          <ul class="footer__columns__content_about footer__list">
+            <li><a class="footer__list" href="#">Home page</a></li>
+            <li><a class="footer__list" href="#">Mission</a></li>
+            <li><a class="footer__list" href="#">Professions</a></li>
           </ul>
-        </div>
-        <div class="footer__columns__content_social">
-            <p class="footer__column-heading">Social media</p>
-            <img class="footer__social-icons" src="images/facebook_white.svg">
-            <a class="footer__column-link" href="#">Facebook</a>
-            <br>
-            <img class="footer__social-icons" src="images/instagram_white.svg">
-            <a class="footer__column-link" href="#">Instagram</a>
+        </nav>
+        <div class="footer__columns footer__columns__content_social">
+          <h2 class="footer__columns footer__columns__content_social footer__column-heading">Social media</h2>
+          <ul class="footer__columns footer__columns__content_social footer__list">
+            <li><a href="#"><img class="footer__columns__content_social footer__list footer__social-icons" src="images/facebook_white.svg " alt="Instagram Icon"></a></li>
+            <li><a class="footer__columns__content_social footer__list footer__column-link" href="#">Facebook</a></li>
+            <li><a href="#"><img class="footer__columns__content_social footer__list footer__social-icons" src="images/instagram_white.svg" alt="Instagram Icon"></li>
+            <li><a class="footer__columns__content_social footer__list footer__column-link" href="#">Instagram</a></li>
+          </ul>
         </div>
       </div>
     </footer>
