--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       </section>
 
       <section class="digits">
-        <h2 class="section-title" >Facts and figures</h1>
-        <h3 class="section-subtitle">On learning and the brain</h2>
+        <h2 class="section-title" >Facts and figures</h2>
+        <h3 class="section-subtitle">On learning and the brain</h3>
         <ul class="table">
           <li class="table__cell">
               <h3 class="table__heading" >86 Billion</h3>
@@ -85,15 +85,15 @@
       </section>
 
       <section class="feynman">
-        <h2 class="feynman__title">The Feynman Technique</h1>
-        <h3 class="feynman__subtitle">Learn without forgeting</h2>
+        <h2 class="feynman__title">The Feynman Technique</h2>
+        <h3 class="feynman__subtitle">Learn without forgeting</h3>
         <a class="feynman__link" href="#">More →</a>
       </section>
 
       <section class="kaufman">
         <div class="kaufman__content">
-        <h2 class="kaufman__content section-title_theme_dark">Ten principles of rapid skill aquisition</h1>
-        <h3 class="kaufman__content section-subtitle_theme_dark">By Josh Kaufman</h2>
+        <h2 class="kaufman__content section-title_theme_dark">Ten principles of rapid skill aquisition</h2>
+        <h3 class="kaufman__content section-subtitle_theme_dark">By Josh Kaufman</h3>
         <ul class="kaufman__content table_theme_dark">
           <li class="kaufman__content table__cell_theme_dark">
               <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">1</h2>
@@ -159,7 +159,7 @@
           <ul class="footer__columns footer__columns__content_social footer__list">
             <li><a href="#"><img class="footer__columns__content_social footer__list footer__social-icons" src="images/facebook_white.svg " alt="Instagram Icon"></a></li>
             <li><a class="footer__columns__content_social footer__list footer__column-link" href="#">Facebook</a></li>
-            <li><a href="#"><img class="footer__columns__content_social footer__list footer__social-icons" src="images/instagram_white.svg" alt="Instagram Icon"></li>
+            <li><a href="#"><img class="footer__columns__content_social footer__list footer__social-icons" src="images/instagram_white.svg" alt="Instagram Icon"></a></li>
             <li><a class="footer__columns__content_social footer__list footer__column-link" href="#">Instagram</a></li>
           </ul>
         </div>
