--- a/index.html
+++ b/index.html
@@ -142,25 +142,23 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__columns footer__columns__content_copyright">
-          <img class="footer__columns logo_place_footer" src="images/logo_place_footer.png">
-          <p class="footer__columns footer__author">&#169; David Cares-Gomez</p>
+        <div class="footer__columns__content_copyright">
+          <img class="logo_place_footer" src="images/logo_place_footer.png">
+          <p class="footer__author">&#169; David Cares-Gomez</p>
         </div>
-        <nav class="footer__columns footer__columns__content_about">
-          <h2 class="footer__columns__content_about footer__column-heading">About Practicum by Yandex</h2>
+        <nav class="footer__columns__content_about">
           <ul class="footer__columns__content_about footer__list">
+            <li><h2 class="footer__columns__content_about footer__column-heading">About Practicum by Yandex</h2></li>
             <li><a class="footer__list" href="#">Home page</a></li>
             <li><a class="footer__list" href="#">Mission</a></li>
             <li><a class="footer__list" href="#">Professions</a></li>
           </ul>
         </nav>
-        <div class="footer__columns footer__columns__content_social">
-          <h2 class="footer__columns footer__columns__content_social footer__column-heading">Social media</h2>
-          <ul class="footer__columns footer__columns__content_social footer__list">
-            <li><a href="#"><img class="footer__columns__content_social footer__list footer__social-icons" src="images/facebook_white.svg " alt="Instagram Icon"></a></li>
-            <li><a class="footer__columns__content_social footer__list footer__column-link" href="#">Facebook</a></li>
-            <li><a href="#"><img class="footer__columns__content_social footer__list footer__social-icons" src="images/instagram_white.svg" alt="Instagram Icon"></a></li>
-            <li><a class="footer__columns__content_social footer__list footer__column-link" href="#">Instagram</a></li>
+        <div class="footer__columns__content_social">
+          <ul class=" footer__columns__content_social footer__list">
+            <li><h2 class="footer__column-heading">Social media</h2></li>
+            <li><a href="#"><img class="footer__social-icons" src="images/facebook_white.svg " alt="Facebook Icon"></a><a class="footer__column-link" href="#">Facebook</a></li>
+            <li><a href="#"><img class="footer__social-icons" src="images/instagram_white.svg" alt="Instagram Icon"></a><a class="footer__column-link" href="#">Instagram</a></li>
           </ul>
         </div>
       </div>
