--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
               <p class="table__text">World Bank, 2017</p>
           </li>
           <li class="table__cell">
-            <div class="table__heading">
-              <h3>26 years old</h3>
-            </div>
+              <h3 class="table__heading">26 years old</h3>
               <p class="table__text">The age at which Albert Einstein published his groundbreaking paper on special relativity</p>
           </li>
           <li class="table__cell">
@@ -91,74 +89,72 @@
       </section>
 
       <section class="kaufman">
-        <div class="kaufman__content">
-        <h2 class="kaufman__content section-title_theme_dark">Ten principles of rapid skill aquisition</h2>
-        <h3 class="kaufman__content section-subtitle_theme_dark">By Josh Kaufman</h3>
-        <ul class="kaufman__content table_theme_dark">
-          <li class="kaufman__content table__cell_theme_dark">
-              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">1</h2>
-              <p class="kaufman__content table__text_theme_dark">Choose a loveable project</p>
+        <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill aquisition</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">By Josh Kaufman</h3>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
+              <p class="table__text table__text_theme_dark">Choose a loveable project</p>
           </li>
-          <li class="kaufman__content table__cell_theme_dark">
-              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">2</h2>
-              <p class="kaufman__content table__text_theme_dark">Focus your energy on one skill at a time</p>
+          <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
+              <p class="table__text table__text_theme_dark">Focus your energy on one skill at a time</p>
           </li>
-          <li class="kaufman__content table__cell_theme_dark">
-              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">3</h2>
-              <p class="kaufman__content table__text_theme_dark">Define your target performance level</p>
+          <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
+              <p class="table__text table__text_theme_dark">Define your target performance level</p>
           </li>
-          <li class="kaufman__content table__cell_theme_dark">
-              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">4</h2>
-              <p class="kaufman__content table__text_theme_dark">Deconstruct the skill into sub-skills</p>
+          <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
+              <p class="table__text table__text_theme_dark">Deconstruct the skill into sub-skills</p>
           </li>
-          <li class="kaufman__content table__cell_theme_dark">
-              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">5</h2>
-              <p class="kaufman__content table__text_theme_dark">Obtain critical tools</p>
+          <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
+              <p class="table__text table__text_theme_dark">Obtain critical tools</p>
           </li>
-          <li class="kaufman__content table__cell_theme_dark">
-              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">6</h2>
-              <p class="kaufman__content table__text_theme_dark">Eliminate barriers to practice</p>
+          <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
+              <p class="table__text table__text_theme_dark">Eliminate barriers to practice</p>
           </li>
-          <li class="kaufman__content table__cell_theme_dark">
-              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">7</h2>
-              <p class="kaufman__content table__text_theme_dark">Make dedicated time for practice</p>
+          <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
+              <p class="table__text table__text_theme_dark">Make dedicated time for practice</p>
           </li>
-          <li class="kaufman__content table__cell_theme_dark">
-              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">8</h2>
-              <p class="kaufman__content table__text_theme_dark">Create fast feedback loops</p>
+          <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
+              <p class="table__text table__text_theme_dark">Create fast feedback loops</p>
           </li>
-          <li class="kaufman__content table__cell_theme_dark">
-              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">9</h2>
-              <p class="kaufman__content table__text_theme_dark">Practice by the clock in short bursts</p>
+          <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
+              <p class="table__text table__text_theme_dark">Practice by the clock in short bursts</p>
           </li>
-          <li class="kaufman__content table__cell_theme_dark">
-              <h2 class="kaufman__content table__cell_theme_dark table__heading_theme_dark">10</h2>
-              <p class="kaufman__content table__text_theme_dark">Emphasize quanity and speed</p>
+          <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
+              <p class="table__text table__text_theme_dark">Emphasize quanity and speed</p>
           </li>
         </ul>
-        </div>
       <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="A big blue triangle, over which Josh Kaufman claims ownership">
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__columns__content_copyright">
-          <img class="logo_place_footer" src="images/logo_place_footer.png">
+        <div class="footer__column__content_copyright">
+          <img class="logo logo_place_footer" src="images/logo_place_footer.png" alt="Practicum Logo">
           <p class="footer__author">&#169; David Cares-Gomez</p>
         </div>
-        <nav class="footer__columns__content_about">
-          <ul class="footer__columns__content_about footer__list">
-            <li><h2 class="footer__columns__content_about footer__column-heading">About Practicum by Yandex</h2></li>
-            <li><a class="footer__list" href="#">Home page</a></li>
-            <li><a class="footer__list" href="#">Mission</a></li>
-            <li><a class="footer__list" href="#">Professions</a></li>
+        <nav class="footer__column__content_about">
+          <h2 class="footer__column-heading">About Practicum by Yandex</h2>
+          <ul class="footer__list">
+            <li><a class="footer__column-link" href="#">Home page</a></li>
+            <li><a class="footer__column-link" href="#">Mission</a></li>
+            <li><a class="footer__column-link" href="#">Professions</a></li>
           </ul>
         </nav>
-        <div class="footer__columns__content_social">
-          <ul class=" footer__columns__content_social footer__list">
-            <li><h2 class="footer__column-heading">Social media</h2></li>
-            <li><a href="#"><img class="footer__social-icons" src="images/facebook_white.svg " alt="Facebook Icon"></a><a class="footer__column-link" href="#">Facebook</a></li>
-            <li><a href="#"><img class="footer__social-icons" src="images/instagram_white.svg" alt="Instagram Icon"></a><a class="footer__column-link" href="#">Instagram</a></li>
+        <div class="footer__column__content_social">
+          <h2 class="footer__column-heading">Social media</h2>
+          <ul class="footer__list">
+            <li><a class="footer__column-link" href="#"><img class="footer__social-icons" src="images/facebook_white.svg " alt="Facebook Icon">Facebook</a></li>
+            <li><a class="footer__column-link" href="#"><img class="footer__social-icons" src="images/instagram_white.svg" alt="Instagram Icon">Instagram</a></li>
           </ul>
         </div>
       </div>
