--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <section class="digits">
         <h2 class="section-title" >Facts and figures</h2>
-        <h3 class="section-subtitle">On learning and the brain</h3>
+        <p class="section-subtitle">On learning and the brain</p>
         <ul class="table">
           <li class="table__cell">
               <h3 class="table__heading" >86 Billion</h3>
@@ -84,13 +84,13 @@
 
       <section class="feynman">
         <h2 class="feynman__title">The Feynman Technique</h2>
-        <h3 class="feynman__subtitle">Learn without forgeting</h3>
+        <p class="feynman__subtitle">Learn without forgeting</p>
         <a class="feynman__link" href="#">More →</a>
       </section>
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill aquisition</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">By Josh Kaufman</h3>
+        <p class="section-subtitle section-subtitle_theme_dark">By Josh Kaufman</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -138,11 +138,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column__content_copyright">
+        <div class="footer__columns footer__column_content_copyright">
           <img class="logo logo_place_footer" src="images/logo_place_footer.png" alt="Practicum Logo">
           <p class="footer__author">&#169; David Cares-Gomez</p>
         </div>
-        <nav class="footer__column__content_about">
+        <nav class="footer__columns footer__column_content_about">
           <h2 class="footer__column-heading">About Practicum by Yandex</h2>
           <ul class="footer__list">
             <li><a class="footer__column-link" href="#">Home page</a></li>
@@ -150,7 +150,7 @@
             <li><a class="footer__column-link" href="#">Professions</a></li>
           </ul>
         </nav>
-        <div class="footer__column__content_social">
+        <div class="footer__columns footer__column_content_social">
           <h2 class="footer__column-heading">Social media</h2>
           <ul class="footer__list">
             <li><a class="footer__column-link" href="#"><img class="footer__social-icons" src="images/facebook_white.svg " alt="Facebook Icon">Facebook</a></li>
