--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__columns footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img class="logo logo_place_footer" src="images/logo_place_footer.png" alt="Practicum Logo">
           <p class="footer__author">&#169; David Cares-Gomez</p>
         </div>
-        <nav class="footer__columns footer__column_content_about">
+        <nav class="footer__column footer__column_content_about">
           <h2 class="footer__column-heading">About Practicum by Yandex</h2>
           <ul class="footer__list">
             <li><a class="footer__column-link" href="#">Home page</a></li>
@@ -150,7 +150,7 @@
             <li><a class="footer__column-link" href="#">Professions</a></li>
           </ul>
         </nav>
-        <div class="footer__columns footer__column_content_social">
+        <div class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Social media</h2>
           <ul class="footer__list">
             <li><a class="footer__column-link" href="#"><img class="footer__social-icons" src="images/facebook_white.svg " alt="Facebook Icon">Facebook</a></li>
