added files for project 2

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="vendor/normalize.css">
+  <link rel="stylesheet" href="pages/index.css">
   <title>Learning how to learn</title>
 </head>
 <body>
   <div class="page">
-    <header class="header">
+    <!-- <header class="header">
       <img class="logo logo_place_header" src="images/logo_place_header.png" alt="Epic ponderer stood on a mountaintop
       deliberating over the finer points of the modern educational
       system, while also wondering where that giant blue square came
@@ -39,6 +39,64 @@
                 effective learning.</p>
           </div>
         </div>
+      </section> -->
+
+      <section class="techniques">
+        <h2 class="section-title">Learning Techniques</h2>
+        <p class="section-subtitle">Five Strategies from Barbara Oakley</p>
+        <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image">
+            <h3 class="cards__title">Two Ways of Thinking</h3>
+            <p class="cards__description">Deep understanding comes from being able to toggle back and forth between focused and diffused thinking.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Improving your ability to remember key bits of information to connect different parts of the brain.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image">
+            <h3 class="cards__title">Interleaving</h3>
+            <p class="cards__description">When you learn multiple skills at the same time, they reinforce each other.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image">
+            <h3 class="cards__title">Questions</h3>
+            <p class="cards__description">When listening to your teacher, think up a good question, something that you're really itching to know.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image">
+            <h3 class="cards__title">Illusion of Competence</h3>
+            <p class="cards__description">Test yourself, write it down, tell other people, and repeat the process in different setting. Only then can you be truly certain you've understood something.</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- <section class="video">
+        <h2 class="section-title">TED Talks</h2>
+        <p class="section-subtitle">For lovers of procrastination</p>
+        <div class="video__iframes">
+          <div class="video__iframe">
+
+          </div>
+        </div>
+      </section>
+
+      <section class="oakley">
+          <div class="two-columns">
+            <h2 class="two-columns__brief"></h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+              </p>
+            </div>
+          </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">The Feynman Technique</h2>
+        <p class="feynman__subtitle">Learn without forgeting</p>
+        <a class="feynman__link" href="#">More →</a>
       </section>
 
       <section class="digits">
@@ -82,10 +140,18 @@
         </ul>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">The Feynman Technique</h2>
-        <p class="feynman__subtitle">Learn without forgeting</p>
-        <a class="feynman__link" href="#">More →</a>
+      <section class="khan">
+        <div class="khan__container">
+            <p class="khan__author"></p>
+            <h2 class="khan__title"></h2>
+            <p class="khan__quote"></p>
+            <p class="khan__quote-author"></p>
+            <p class="khan__quote-author-subline"></p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic">
+            <p class="khan__buy-link"></p>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
@@ -135,6 +201,14 @@
         </ul>
       <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="A big blue triangle, over which Josh Kaufman claims ownership">
       </section>
+
+      <section class="resources">
+        <h2 class="section-title"></h2>
+        <p class="section-subtitle"></p>
+        <div class="resources__logo-zone"></div>
+        <img class="resources__logo">
+      </section>
+
     </main>
     <footer class="footer">
       <div class="footer__columns">
@@ -158,7 +232,7 @@
           </ul>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </div>
 </body>
 </html>
